>netFramework DBML orm Linq

--- a/LinqToSqlJoining/App.config
+++ b/LinqToSqlJoining/App.config
@@ -3,10 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="ObjectRelationalModelFramework.Properties.Settings.BookLibraryConnectionString"
-            connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=BookLibrary;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-        <add name="ObjectRelationalModelFramework.Properties.Settings.CollegeConnectionString"
+        <add name="LinqToSqlJoining.Properties.Settings.CollegeConnectionString"
             connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=College;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
